objects/Order_Request__c.object
<CustomObject>
    <fields>
        <fullName>Vendor_Address__c</fullName>
        <description>PCOR Application.Created to capture the address of the vendor.</description>
        <label>Address</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vendor_City__c</fullName>
        <description>PCOR Application.Created to capture the vendor city.</description>
        <label>City</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vendor_Contact__c</fullName>
        <description>PCOR Application.Created to capture the primary contact of the vendor.</description>
        <inlineHelpText>Enter the primary contact for the vendor.</inlineHelpText>
        <label>Contact</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vendor_Email__c</fullName>
        <description>PCOR Application.Created to capture the email address of the vendor.</description>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Vendor_Name__c</fullName>
        <description>PCOR Application.Created to capture the name of the vendor.</description>
        <label>Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vendor_Phone__c</fullName>
        <description>PCOR Application.Created to capture the phone number of the vendor.</description>
        <label>Phone</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vendor_State__c</fullName>
        <description>PCOR Application.Created to capture the state of the vendor.</description>
        <inlineHelpText>Select the State abbreviation(Example: For Virginia select VA)</inlineHelpText>
        <label>State</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>State_Territory</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Vendor_Zip__c</fullName>
        <description>PCOR Application.Created to capture the zip code of the vendor.</description>
        <label>Zip Code</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Website__c</fullName>
        <description>PCOR Application.Created to capture the website of the selected Vendor</description>
        <inlineHelpText>Enter the URL for website of the vendor.</inlineHelpText>
        <label>Website</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>X508_Approver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>PCOR Application. Created to Capture the 508 Approver as the approver.</description>
        <label>508 Reviewer</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Order_Requests1</relationshipName>
        <type>Lookup</type>
    </fields>
    <description>Requests for orders to be placed.  Initially used in the GAS application, then in PCORS, and available for other uses.  Used not only in native licensed access ("Type 3 interface" in BAP parlance) but also in "Type 1" interface (unlicensed guest access).</description>
    <label>Order Request</label>
    <nameField>
        <displayFormat>EPA-OR-{000000000}</displayFormat>
        <label>Order Request ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Order Requests</pluralLabel>
    <sharingModel>Private</sharingModel>
    <listViews>
        <fullName>All_Requests</fullName>
        <columns>Card_Holder__c</columns>
        <columns>Office_Lab__c</columns>
        <columns>Branch__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>NAME</columns>
        <columns>Requester__c</columns>
        <columns>Request_Status__c</columns>
        <columns>Assigned_to__c</columns>
        <columns>Vendor_Name__c</columns>
        <columns>FCO__c</columns>
        <columns>Order_Request_Total__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Order_Request__c.Purchase_Card_Order_Request</value>
        </filters>
        <filters>
            <field>NAME</field>
            <operation>equals</operation>
            <value>EPA-OR-000005878</value>
        </filters>
        <label>All PCORS Requests</label>
    </listViews>
    <listViews>
        <fullName>Approved_Gas_Order_Requests</fullName>
        <columns>NAME</columns>
        <columns>Requester_Org__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Delivery_Date__c</columns>
        <columns>Stage__c</columns>
        <columns>Delivery_facilities__c</columns>
        <columns>Facility_Location__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Order_Request__c.GAS_Order_Request</value>
        </filters>
        <filters>
            <field>Stage__c</field>
            <operation>equals</operation>
            <value>Request Approved</value>
        </filters>
        <label>GAS Approved Orders</label>
    </listViews>
    <listViews>
        <fullName>Archived_Order_Requests</fullName>
        <columns>NAME</columns>
        <columns>Requester_Org__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Delivery_Date__c</columns>
        <columns>Stage__c</columns>
        <columns>Delivery_facilities__c</columns>
        <columns>Facility_Location__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Order_Request__c.GAS_Order_Request</value>
        </filters>
        <filters>
            <field>Archive__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>GAS Archived Orders</label>
    </listViews>
    <listViews>
        <fullName>Fully_Received_Orders</fullName>
        <columns>NAME</columns>
        <columns>Requester_Org__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Delivery_Date__c</columns>
        <columns>Stage__c</columns>
        <columns>Delivery_facilities__c</columns>
        <columns>Facility_Location__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Order_Request__c.GAS_Order_Request</value>
        </filters>
        <filters>
            <field>Stage__c</field>
            <operation>equals</operation>
            <value>Full Order Received</value>
        </filters>
        <label>GAS Fully Received Orders</label>
    </listViews>
    <listViews>
        <fullName>GAS_Admins_Order_Request</fullName>
        <filterScope>Queue</filterScope>
        <label>GAS Admins</label>
        <queue>GAS_Admins</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>GAS_Order_All</fullName>
        <columns>NAME</columns>
        <columns>Requester_Org__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Delivery_Date__c</columns>
        <columns>Stage__c</columns>
        <columns>Delivery_facilities__c</columns>
        <columns>Facility_Location__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Order_Request__c.GAS_Order_Request</value>
        </filters>
        <label>GAS All Order Requests</label>
    </listViews>
    <listViews>
        <fullName>GAS_Order_Requests</fullName>
        <columns>NAME</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Delivery_Date__c</columns>
        <columns>Stage__c</columns>
        <columns>Delivery_facilities__c</columns>
        <columns>Facility_Location__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Order_Request__c.GAS_Order_Request</value>
        </filters>
        <label>GAS My Order Requests</label>
    </listViews>
    <listViews>
        <fullName>GWERD_s_PCORS_Order_Requests</fullName>
        <columns>NAME</columns>
        <columns>Branch__c</columns>
        <columns>Request_Status__c</columns>
        <columns>Requester__c</columns>
        <columns>Card_Holder__c</columns>
        <columns>DCN__c</columns>
        <columns>FCO__c</columns>
        <columns>Order_Request_Total__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Branch__c</field>
            <operation>contains</operation>
            <value>ORD-NRMRL-GWERD</value>
        </filters>
        <label>GWERD's PCORS Order Requests</label>
    </listViews>
    <listViews>
        <fullName>PCORS_Application_Admins_Order_Request</fullName>
        <filterScope>Queue</filterScope>
        <label>PCORS Application Admins</label>
        <queue>PCORS_Application_Admins</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>PCOR_Order_Requests</fullName>
        <columns>NAME</columns>
        <columns>Card_Holder__c</columns>
        <columns>Requester__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Request_Status__c</columns>
        <columns>Vendor_Name__c</columns>
        <columns>Order_Request_Total__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Card_Holder__c</field>
            <operation>equals</operation>
            <value>David Burden</value>
        </filters>
        <label>PCORS Order Requests</label>
    </listViews>
    <listViews>
        <fullName>Partially_Received_Gas_Orders</fullName>
        <columns>NAME</columns>
        <columns>Requester_Org__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Delivery_Date__c</columns>
        <columns>Stage__c</columns>
        <columns>Delivery_facilities__c</columns>
        <columns>Facility_Location__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Order_Request__c.GAS_Order_Request</value>
        </filters>
        <filters>
            <field>Stage__c</field>
            <operation>equals</operation>
            <value>Partial Order Received</value>
        </filters>
        <label>GAS Partially Received Orders</label>
    </listViews>
    <listViews>
        <fullName>Pending_Approval_Gas_Orders</fullName>
        <columns>NAME</columns>
        <columns>Requester_Org__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Delivery_Date__c</columns>
        <columns>Stage__c</columns>
        <columns>Delivery_facilities__c</columns>
        <columns>Facility_Location__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Order_Request__c.GAS_Order_Request</value>
        </filters>
        <filters>
            <field>Stage__c</field>
            <operation>equals</operation>
            <value>Pending Approval</value>
        </filters>
        <label>GAS Pending Approval Orders</label>
    </listViews>
    <listViews>
        <fullName>Placed_Gas_Orders</fullName>
        <columns>NAME</columns>
        <columns>Requester_Org__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Delivery_Date__c</columns>
        <columns>Stage__c</columns>
        <columns>Delivery_facilities__c</columns>
        <columns>Facility_Location__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Order_Request__c.GAS_Order_Request</value>
        </filters>
        <filters>
            <field>Stage__c</field>
            <operation>equals</operation>
            <value>Order Placed</value>
        </filters>
        <label>GAS Placed Orders</label>
    </listViews>
    <listViews>
        <fullName>test</fullName>
        <columns>NAME</columns>
        <filterScope>Mine</filterScope>
        <label>test</label>
    </listViews>
    <listViews>
        <fullName>test_2</fullName>
        <columns>NAME</columns>
        <columns>FCO__c</columns>
        <columns>Card_Holder__c</columns>
        <columns>DCN__c</columns>
        <filterScope>Mine</filterScope>
        <label>test 2</label>
    </listViews>
    <recordTypes>
        <fullName>GAS_Order_Request</fullName>
        <active>true</active>
        <description>GAS Order Management</description>
        <label>GAS Order Request</label>
    </recordTypes>
    <recordTypes>
        <fullName>Purchase_Card_Order_Request</fullName>
        <active>true</active>
        <description>General Purchase, Facilities Purchase, Health &amp; Safety Related Purchase, IT/E&amp;IT Purchase, Paid Advertisement for Personnel Recruitment Purchase, Protective Services &amp; Equipment,  Printing, Close Scrutiny Purchases</description>
        <label>Purchase Card Order Request</label>
    </recordTypes>
    <validationRules>
        <fullName>ORDGAS_Check_Archive</fullName>
        <active>true</active>
        <description>Gas application</description>
        <errorConditionFormula>AND(
 RecordType.DeveloperName ='GAS_Order_Request',
 NOT(TEXT( Stage__c )='Order Fulfilled'),
 ISCHANGED( Archive__c )
)</errorConditionFormula>
        <errorDisplayField>Archive__c</errorDisplayField>
        <errorMessage>The order request can be archived only after the order request is fulfilled.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ORDGAS_Limit_Delivery_Days_HSF</fullName>
        <active>true</active>
        <errorConditionFormula>IF( RecordType.DeveloperName = 'GAS_Order_Request' &amp;&amp; TEXT(Delivery_facilities__c) = "HSF",

OR (
WEEKDAY( Delivery_Date__c ) = 1,
WEEKDAY( Delivery_Date__c ) = 2,
WEEKDAY( Delivery_Date__c ) = 3,
WEEKDAY( Delivery_Date__c ) = 5,
WEEKDAY( Delivery_Date__c ) = 6,
WEEKDAY( Delivery_Date__c ) = 7)
,FALSE)</errorConditionFormula>
        <errorDisplayField>Delivery_Date__c</errorDisplayField>
        <errorMessage>Delivery Date for Human Studies Facility is only on Wednesdays</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ORDGAS_Limit_Delivery_Days_RTF</fullName>
        <active>true</active>
        <errorConditionFormula>IF( RecordType.DeveloperName = 'GAS_Order_Request' &amp;&amp; TEXT(Delivery_facilities__c) = "Page Rd",

OR (WEEKDAY( Delivery_Date__c ) = 1,
WEEKDAY( Delivery_Date__c ) = 2,
WEEKDAY( Delivery_Date__c ) = 4,
WEEKDAY( Delivery_Date__c ) = 6,
WEEKDAY( Delivery_Date__c ) = 7)

,FALSE)</errorConditionFormula>
        <errorDisplayField>Delivery_Date__c</errorDisplayField>
        <errorMessage>Delivery Date for Page Road is only on Tuesdays &amp; Thursdays.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ORDGAS_Limit_Delivery_Days_RTP</fullName>
        <active>true</active>
        <errorConditionFormula>IF( RecordType.DeveloperName = 'GAS_Order_Request' &amp;&amp; TEXT(Delivery_facilities__c) = "RTP",

OR (WEEKDAY( Delivery_Date__c ) = 1,
WEEKDAY( Delivery_Date__c ) = 2,
WEEKDAY( Delivery_Date__c ) = 4,
WEEKDAY( Delivery_Date__c ) = 6,
WEEKDAY( Delivery_Date__c ) = 7)

,FALSE)</errorConditionFormula>
        <errorDisplayField>Delivery_Date__c</errorDisplayField>
        <errorMessage>Delivery Date for Research Triangle Park is only on Tuesdays &amp; Thursdays</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ORDGAS_Limit_Delivery_Days_Today</fullName>
        <active>true</active>
        <errorConditionFormula>IF(
AND( 
RecordType.DeveloperName = 'GAS_Order_Request',
$Profile.Name &lt;&gt; 'System Administrator',
TEXT(Stage__c)='New Order',
Delivery_Date__c &lt; TODAY()), 

TRUE,FALSE)</errorConditionFormula>
        <errorDisplayField>Delivery_Date__c</errorDisplayField>
        <errorMessage>Delivery Date must be after Today</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>PCORS_EPEAT_checked</fullName>
        <active>true</active>
        <description>If EPEAT is yes then request type needs to be IT/E&amp;It purchase</description>
        <errorConditionFormula>AND(
    NOT(ISPICKVAL( Request_Type__c , "IT/E&amp;IT Purchase")),
    ISPICKVAL( EPEAT__c , 'YES')
)</errorConditionFormula>
        <errorMessage>If your purchase is EPEAT, Request Type needs to be changed to IT Purchase.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>PCORS_EPEAT_validation</fullName>
        <active>true</active>
        <description>PCORS 1.5</description>
        <errorConditionFormula>AND(
    ISPICKVAL( Request_Type__c , 'IT/E&amp;IT Purchase'),
    Green_Purchases__c = TRUE,
    ISPICKVAL(EPEAT__c, "")
)</errorConditionFormula>
        <errorDisplayField>EPEAT__c</errorDisplayField>
        <errorMessage>Please select an EPEAT value</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>PCORS_GP_Order</fullName>
        <active>true</active>
        <description>Require GP Other to be filled if EPEAT equals no</description>
        <errorConditionFormula>AND(
ISPICKVAL( Request_Type__c , 'IT/E&amp;IT Purchase'),
Green_Purchases__c = TRUE,
ISPICKVAL(EPEAT__c, "NO"),
ISBLANK( GP_Other__c )
)</errorConditionFormula>
        <errorDisplayField>GP_Other__c</errorDisplayField>
        <errorMessage>GP Other is required if not an EPEAT purchase</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>PCOR_ITReviewer_Required_When_Type_IT</fullName>
        <active>true</active>
        <description>PCOR Application. Created to check if It “IMO/IT Reviewer” is selected when “IT/E&amp;IT” purchase type is selected.</description>
        <errorConditionFormula>AND(
RecordType.DeveloperName =='Purchase_Card_Order_Request', 
 ISBLANK(IT_Official__c),
 TEXT(Request_Type__c) =='IT/E&amp;IT Purchase'
  )</errorConditionFormula>
        <errorDisplayField>IT_Official__c</errorDisplayField>
        <errorMessage>Select IMO/IT Reviewer.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>PCOR_RecordLockAfterStatusComplete</fullName>
        <active>true</active>
        <description>PCOR Application. Created to lock the record after  status is complete.</description>
        <errorConditionFormula>IF(
AND( 
$Profile.Name &lt;&gt; 'System Administrator',
NOT($Permission.PCORS_Admin_Access ), 
RecordType.DeveloperName = 'Purchase_Card_Order_Request' ,  
OR(
ISPICKVAL(PRIORVALUE(Request_Status__c),'Complete')), 
OR(
ISCHANGED( X508_Approver__c ), 
ISCHANGED( Vendor_Address__c ), 
ISCHANGED( Approving_Official__c ), 
ISCHANGED( Branch_chief_pcor__c ), 
ISCHANGED( Card_Holder__c ), 
ISCHANGED( Vendor_City__c ), 
ISCHANGED( Customer_Account_Number__c	 ), 
ISCHANGED( DCN__c ), 
ISCHANGED( Department__c ), 
ISCHANGED( Deputy_Director__c ), 
ISCHANGED( Description__c ), 
ISCHANGED( Director__c ), 
ISCHANGED( Division__c ), 
ISCHANGED( Does_this_request_require_508_Approval__c ), 
ISCHANGED( Does_this_request_require_an_EPA_Decal__c ), 
ISCHANGED( Vendor_Email__c ), 
ISCHANGED( EPA_Store_Stock_Supply__c ), 
ISCHANGED( Facilities_Reviewer__c ), 
ISCHANGED( FCO__c ), 
ISCHANGED( FSS_Federal_Supply_Sources__c	 ), 
ISCHANGED( GSA_GSA_Advantage_General_Services__c ), 
ISCHANGED( Health_Safety_Reviewerser__c ), 
ISCHANGED( Human_Resource_Official__c ), 
ISCHANGED( IMO__c ), 
ISCHANGED( Is_this_PR_for_training__c ),
ISCHANGED( IT_Official__c ),
ISCHANGED( Justification__c ),
ISCHANGED( JWOD_Programs_NB_NISH__c ),
ISCHANGED( Mandatory_Source_EPA__c ),
ISCHANGED( Vendor_Name__c ),
ISCHANGED( Vendor_Phone__c ),
ISCHANGED( Printing_Reviewer__c ),
ISCHANGED( Property_Reviewer__c ),
ISCHANGED( Request_Completed__c ),
ISCHANGED( Request_Status__c ),
ISCHANGED( Request_Type__c ),
ISCHANGED( Requester_Org__c ),
ISCHANGED( SAM_Link__c ),
ISCHANGED( Shipping_City__c ),
ISCHANGED( Shipping_Phone__c ),
ISCHANGED( Shipping_State__c ),
ISCHANGED( Shipping_Street__c ),
ISCHANGED( Shipping_Zip_Postal_Code__c ),
ISCHANGED( Sole_Source_Purchase__c ),
ISCHANGED( Split_Funding_Justification__c ),
ISCHANGED( Vendor_State__c ),
ISCHANGED( Stage__c ),
ISCHANGED( Title__c ),
ISCHANGED( Total_Quantity__c ),
ISCHANGED( Unauthenticated_Owner__c ),
ISCHANGED( Type_1_Owner_Email__c ),
ISCHANGED( Website__c ),
ISCHANGED( Vendor_Zip__c ),
ISCHANGED( Division_Director__c ),
ISCHANGED(  Date_Allocated__c ),
ISCHANGED(  Date_Ordered__c ),
ISCHANGED(  Date_Received__c )
)),

TRUE,FALSE)</errorConditionFormula>
        <errorMessage>The record is currently locked from editing</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>PCOR_Request_Completed_Checbox_lock</fullName>
        <active>true</active>
        <description>PCOR Application. Created to lock the 'Request Completed' field for all the status except completed.</description>
        <errorConditionFormula>AND(
$Profile.Name &lt;&gt; 'System Administrator',
NOT($Permission.PCORS_Admin_Access ),
RecordType.DeveloperName = 'Purchase_Card_Order_Request' ,
NOT(ISPICKVAL(Request_Status__c,'Approved')),
ISCHANGED( Request_Completed__c )
)</errorConditionFormula>
        <errorDisplayField>Request_Completed__c</errorDisplayField>
        <errorMessage>Request cannot be completed unless approved.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>PCOR_VAlidate_Vendor_Phone</fullName>
        <active>false</active>
        <description>PCOR Application. Created to validate vendor phone.</description>
        <errorConditionFormula>AND(
RecordType.DeveloperName =='Purchase_Card_Order_Request',
NOT(ISBLANK(Vendor_Phone__c )),
NOT(CONTAINS(Vendor_Phone__c , "(XXX) XXX-XXXX")),
NOT(REGEX(Vendor_Phone__c ,"(\\D?[0-9]{3}\\D?)[\\s][0-9]{3}-[0-9]{4}"))
)</errorConditionFormula>
        <errorDisplayField>Vendor_Phone__c</errorDisplayField>
        <errorMessage>Invalid Phone Number. Enter in the format (XXX) XXX-XXXX.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>PCOR_Validate_Dates_Entered</fullName>
        <active>true</active>
        <description>PCOR Application. Created to prevent the users from entering the dates before the request is approved.</description>
        <errorConditionFormula>IF( RecordType.DeveloperName = 'Purchase_Card_Order_Request'  , 

AND(
NOT(ISPICKVAL(PRIORVALUE(Request_Status__c),'Approved')),
OR(
ISCHANGED(  Date_Allocated__c ),
ISCHANGED(  Date_Ordered__c ),
ISCHANGED(  Date_Received__c )
)
)


,FALSE)</errorConditionFormula>
        <errorMessage>Enter the dates after the request is approved.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>PCOR_Validate_InternationalAddress</fullName>
        <active>true</active>
        <description>PCOR Application Created to validate the website.</description>
        <errorConditionFormula>AND(
RecordType.DeveloperName ='Purchase_Card_Order_Request',
International_Addresses__c,
ISBLANK(International_Addresses_Text__c ) 
)</errorConditionFormula>
        <errorDisplayField>International_Addresses_Text__c</errorDisplayField>
        <errorMessage>'International Address' text box cannot be left blank when 'International Address' checkbox is checked.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>PCOR_Validate_MandatorySources</fullName>
        <active>true</active>
        <description>PCOR Application. Created  to check if atleast one mandatory source is selected.</description>
        <errorConditionFormula>AND(RecordType.DeveloperName =='Purchase_Card_Order_Request',
NOT(ISNEW()),
NOT(OR(
Mandatory_Source_EPA__c ,
EPA_Store_Stock_Supply__c ,
JWOD_Programs_NB_NISH__c ,
GSA_GSA_Advantage_General_Services__c ,
FSS_Federal_Supply_Sources__c ,
Sole_Source_Purchase__c 
))
)</errorConditionFormula>
        <errorDisplayField>Mandatory_Source_EPA__c</errorDisplayField>
        <errorMessage>Select Mandatory Sources.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>PCOR_Validate_SamsLink</fullName>
        <active>true</active>
        <description>PCOR Application Created to validate the Sams link and if it is checked, user need to enter sams date.</description>
        <errorConditionFormula>AND(
 OR(RecordType.DeveloperName =='Purchase_Card_Order_Request',
RecordType.DeveloperName =='PCOR_Amendment'),
SAM_Link__c,
ISPICKVAL(Request_Status__c,'Awaiting Approval'),
(ISBLANK(SAMS_Check_Date__c))
)</errorConditionFormula>
        <errorDisplayField>SAMS_Check_Date__c</errorDisplayField>
        <errorMessage>'SAMS Check Date' should be filled when 'SAM Link' is checked.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>PCOR_Validate_Shipping_Phone</fullName>
        <active>false</active>
        <description>PCOR Application. Created to validate phone.</description>
        <errorConditionFormula>AND(
RecordType.DeveloperName =='Purchase_Card_Order_Request',
NOT(ISBLANK(Shipping_Phone__c )),
NOT(CONTAINS(Shipping_Phone__c, "(XXX) XXX-XXXX")),
NOT(REGEX(Shipping_Phone__c ,"(\\D?[0-9]{3}\\D?)[\\s][0-9]{3}-[0-9]{4}"))
)</errorConditionFormula>
        <errorDisplayField>Shipping_Phone__c</errorDisplayField>
        <errorMessage>Invalid Phone Number. Enter in the format (XXX) XXX-XXXX.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>PCOR_Validate_Shipping_ZipCode</fullName>
        <active>false</active>
        <description>PCOR Application. Created to validate the shipping zip code of the order request.</description>
        <errorConditionFormula>IF(
AND(
RecordType.DeveloperName ='Purchase_Card_Order_Request',
NOT(ISBLANK(Shipping_Zip_Postal_Code__c )),
NOT(REGEX(  Shipping_Zip_Postal_Code__c , "[0-9]{5}"))
),
true,false)</errorConditionFormula>
        <errorDisplayField>Shipping_Zip_Postal_Code__c</errorDisplayField>
        <errorMessage>Invalid Zip Code.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>PCOR_Validate_Vendor_ZipCode</fullName>
        <active>false</active>
        <description>PCOR Application. Created to validate the zip code in the vendor details.</description>
        <errorConditionFormula>IF(
AND(
RecordType.DeveloperName ='Purchase_Card_Order_Request',
NOT(ISBLANK(Vendor_Zip__c )),
NOT(REGEX( Vendor_Zip__c , "[0-9]{5}"))
),
true,false)</errorConditionFormula>
        <errorDisplayField>Vendor_Zip__c</errorDisplayField>
        <errorMessage>Invalid Zip Code.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>PCOR_Validate_Website</fullName>
        <active>true</active>
        <description>PCOR Application Created to validate the website.</description>
        <errorConditionFormula>AND(
RecordType.DeveloperName ='Purchase_Card_Order_Request',
NOT(ISBLANK(Website__c )),
NOT(BEGINS(Website__c , "https://")),
NOT(BEGINS(Website__c , "http://")),
NOT(BEGINS(Website__c , "www.")))</errorConditionFormula>
        <errorDisplayField>Website__c</errorDisplayField>
        <errorMessage>Invalid Website.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>SAMS_Link_Mandatory</fullName>
        <active>false</active>
        <errorConditionFormula>AND(
ISPICKVAL(Request_Status__c,'Awaiting Approval'),
$RecordType.Name = "Purchase Card Order Request",
SAM_Link__c
)</errorConditionFormula>
        <errorDisplayField>SAM_Link__c</errorDisplayField>
        <errorMessage>System of Award Management field is required.</errorMessage>
    </validationRules>
</CustomObject>